# apertium-anaphora

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  apertium-anaphora.pc.in  cmake.sh  configure.ac
.github/workflows/: build.yaml
dev/: sme_giella-ud-test.txt  sme_giella-ud-train.txt
evaluation/: Catalan-Italian-Evaluation.tsv  Northern Sami-Norwegian Bokmål-Evaluation.tsv  Spanish-English-Data.tsv  Spanish-English-Evaluation.tsv
locales/: Makefile.am  root.txt
samples/: apertium-eng-spa.spa-eng.arx  test_exclude.txt  test_out.txt  test_with_anaphor_tag.txt
src/: CMakeLists.txt  Makefile.am  anaphora.cc  anaphora.dtd  apertium-validate-anaphora.in  parse_arx.cc  parse_arx.h  parse_biltrans.cc  parse_biltrans.h  parse_biltrans.h.gch  parse_markables.cc  parse_markables.h  parse_ref.cc  parse_ref.h  pattern_arx.cc  pattern_arx.h  pattern_ref.cc  pattern_ref.h  score.cc  score.h
tests/: apertium-eng-spa.spa-eng.arx  empty.arx  empty.out  test.in  test.sh  test_exclude.out  test_lemma.in  test_lemma.out  test_wblank.in  test_wblank.out  test_with_anaphor_tag.in  test_with_anaphor_tag.out
